--- a/shard.yml
+++ b/shard.yml
@@ -10,8 +10,8 @@ crystal: ">= 1.0.0"
 
 dependencies:
   redis:
-    github: stefanwille/crystal-redis
-    version: ~> 2.6
+    github: jgaskins/redis
+    version: ~> 0.6.1
   kemal:
     github: kemalcr/kemal
     version: "~> 1.0.0"
